# pointcloud2ifc

./: README.md  pyproject.toml
.github/workflows/: ci.yml  scan2ifc.yml
examples/: demo.ipynb
src/pointcloud2ifc/: __init__.py  cli.py  ifc_builder.py  io.py  pipeline.py  pretrained.py  segmentation.py
src/pointcloud2ifc.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
tests/: conftest.py  test_cli.py  test_ifc_builder.py  test_io.py  test_pipeline.py  test_pretrained.py  test_segmentation.py
