[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "pointcloud2ifc"
version = "0.1.0"
description = "Automatic conversion of point clouds to IFC (BIM) files using BIMNet semantic categories"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.10"
dependencies = [
    "open3d>=0.17",
    "numpy>=1.24",
    "ifcopenshell>=0.7",
    "click>=8.1",
    "scikit-learn>=1.3",
]

[project.optional-dependencies]
ml = [
    "torch>=2.0",
    "torchvision",
]
dev = [
    "pytest>=7.0",
    "ruff>=0.1",
]

[project.scripts]
pointcloud2ifc = "pointcloud2ifc.cli:cli"

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
line-length = 100
target-version = "py310"
